# PerpScope

./: .dockerignore  .env.example  .gitignore  README.md  coin_universe.json  collection_progress.json  market_cap_classification.json  pyproject.toml  requirements.txt
.github/workflows/: debug_domains.yml  update_funding.yml  update_prices.yml
backend/: main.py  requirements.txt  telegram_alerts.py
backend/database/: connection.py  db_config.py  migrate_to_supabase.py  supabase.py  timescale.py
backend/routers/: analytics.py  auth.py  automation.py  debug.py  webhooks.py
docker/: Dockerfile  docker-compose.yml
perp-scope-vision/src/: routeTree.gen.ts
src/: calculate_funding.py  calculate_rho.py  collect_historical.py  config.py  database.py  get_market_caps.py  get_universe.py  setup_webhook.py  telegram_alerts.py  update_data.py  update_universe.py  utils.py
tests/: test_api_endpoints.py  test_calculate_rho.py  test_connection.py
